--- a/index.html
+++ b/index.html
@@ -123,24 +123,28 @@
 
             <h2>Technologies utilisées</h2>
             <div class="row-fluid">
-              <div class="span4">
+              <div class="span3">
                 <h4><img src="assets/img/tech/wp.png"> Wordpress</h4>
                 <p>Outil de gestion de contenu de site web afin de façilement garder votre page web à jour en y ajoutant ou modifiant son contenu.</p>
                 <a href="http://wordpress.org/">Site officiel Wordpress</a>
               </div>
-              <div class="span4">
+              <div class="span3">
                 <h4><img src="assets/img/tech/gwt.png"> Google Web Toolkit</h4>
                 <p>Google Web Toolkit (GWT) est un outil de développement pour la construction et l'optimisation de complexes applications basées sur navigateur. GWT est utilisé par de nombreux produits de Google, il est open source et utilisé par des milliers de développeurs à travers le monde.</p>
                 <a href="https://developers.google.com/web-toolkit/">Site officiel GWT</a>
               </div>
-              <div class="span4">
+              <div class="span3">
                 <h4><img src="assets/img/tech/gae.png"> Google App Engine</h4>
                 <p>Grâce à Google App Engine, vos applications Web peuvent profiter des mêmes systèmes que ceux utilisés par les applications Google elles-mêmes. Développement rapide, déploiement accéléré, administration simplifiée, évolutivité sans effort, etc.</p>
                 <a href="https://developers.google.com/appengine/?hl=fr">Site officiel GAE</a>
               </div>
+              <div class="span3">
+                <h4><img src="assets/img/tech/node.png"> NodeJS</h4>
+                <p>NodeJS est une plateforme javascript permettant le développement d'application réseau légères et rapide en temps réel</p>
+                <a href="http://nodejs.org/">Site officiel Node</a>
+              </div>
             </div>
       </div>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       <div id="contact" class="row-fluid">
         <div class="span12 well">
           <h2>Contact</h2>
