--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div id="accueil" class="hero-unit">
         <img src="assets/img/AFR-Logo.png">
+        <p>AFR Software est un regroupement de trois étudiants en Génie Logiciel développant des applications web et mobiles. Nous offrons des services de consultation afin d'offrir à nos clients des solutions informatiques personnalisées.</p>
       </div>
 
       <!-- Example row of columns -->
@@ -120,7 +121,7 @@
                 </div>
               </div>
             </div>
-
+            <br><br>
             <h2>Technologies utilisées</h2>
             <div class="row-fluid">
               <div class="span3">
@@ -145,19 +146,40 @@
               </div>
             </div>
       </div>
-      <div id="contact" class="row-fluid">
-        <div class="span12 well">
-          <h2>Contact</h2>
+    </div> 
+      
+    <div id="contact">
+      <div class="well">
+        <h2>Contact</h2>
+        <p><i class="icon-twitter"></i> <a href="mailto:contact@afrsoftware.com">contact@afrsoftware.com</a></p>
+        <br>
+        <h2>Équipe</h2>
+        <div class="row-fluid">
+          <div class="span4">
+            <h3>Bruno Gagnon-Adam</h3>
+            <p><i class="icon-envelope"></i> <a href="mailto:bruno@afrsoftware.com">bruno@afrsoftware.com</a></p>
+            <p><i class="icon-twitter"></i> <a href="http://twitter.com/willyfortin">willyfortin</a></p>
+          </div>
+          <div class="span4">
+            <h3>William Fortin</h3>
+            <p><i class="icon-envelope"></i> <a href="mailto:william@afrsoftware.com">william@afrsoftware.com</a></p>
+            <p><i class="icon-twitter"></i> <a href="https://twitter.com/bgagnonadam">bgagnonadam</a></p>
+          </div>
+          <div class="span4">
+            <h3>Jonathan Rochette</h3>
+            <p><i class="icon-envelope"></i> <a href="mailto:jonathan@afrsoftware.com">jonathan@afrsoftware.com</a></p>
+            <p><i class="icon-twitter"></i> <a href="https://twitter.com/JoRochette">JoRochette</a></p>
+          </div>
         </div>
       </div>
-
+    </div>
+        
       <hr>
 
       <footer>
         <p>&copy; AFR Software 2011 - 2012</p>
       </footer>
 
-    </div> 
 
     <script src="assets/js/jquery-1.8.2.js"></script>
     <script src="assets/js/jquery.easing.js"></script>
