Correction icône e-mail

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div id="contact">
       <div class="well">
         <h2>Contact</h2>
-        <p><i class="icon-twitter"></i> <a href="mailto:contact@afrsoftware.com">contact@afrsoftware.com</a></p>
+        <p><i class="icon-envelope"></i> <a href="mailto:contact@afrsoftware.com">contact@afrsoftware.com</a></p>
         <br>
         <h2>Équipe</h2>
         <div class="row-fluid">
