Retrait du message d'application web de Minos dans section 'Nos projets'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>AFR Software</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -100,9 +100,8 @@
               <div id="accordion">
                 <div class="link-header">Centre CrossFit Minos</div>
                 <div class="link-content">
-                  <p>Le <strong>Centre CrossFit Minos</strong> a fait appel à AFR Software pour développer son site web ainsi que sont application de réservation en ligne.</p>
-                  <p>Les membres du gym peuvent voir en temps réelles les places restantes à un entraînement et s'inscrire afin de réserver leur place.</p>
-                  <p>Le site web est piloté par un CMS Wordpress et l'application a été développée en Google Web Toolkit hébergée sur les serveurs de Google App Engine.</p>
+                  <p>Le <strong>Centre CrossFit Minos</strong> a fait appel à AFR Software pour développer son site web.</p>
+                  <p>Le site web est piloté par un CMS Wordpress avec un thème personnalisé développé spéifiquement pour le Centre CrossFit Minos</p>
                   <a href="http://crossfitminos.com/" target="_blank">Site web Centre CrossFit Minos</a>
                 </div>
                 <div class="link-header">Camping Ruisseau Bleu</div>
@@ -152,6 +151,7 @@
       <div class="well">
         <h2>Contact</h2>
         <p><i class="icon-envelope"></i> <a href="mailto:contact@afrsoftware.com">contact@afrsoftware.com</a></p>
+        <p><i class="icon-twitter"></i> <a href="https://twitter.com/AFRSoftware">AFRSoftware</a></p>
         <br>
         <h2>Équipe</h2>
         <div class="row-fluid">
