Correction Fautes avec antidote

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="span4">
           <h4><img src="assets/img/icons/gear.png"> Applications web</h4>
-          <p>La puissance du web est à son meilleur. Offrez vous une application web et assurez un accessibilité complète de vos données en tout temps et partout.</p>
+          <p>La puissance du web est à son meilleur. Offrez-vous une application web et assurez une accessibilité complète de vos données en tout temps et partout.</p>
        </div>
         <div class="span4">
           <h4><img src="assets/img/icons/tool.png"> Technologies modernes</h4>
@@ -107,8 +107,8 @@
                 <div class="link-header">Camping Ruisseau Bleu</div>
                 <div class="link-content">
                   <p>Le <strong>Camping Ruisseau</strong> a fait appel à AFR Software pour réorganiser son image sur le web.</p>
-                  <p>Les site montre les différents services offerts au camping, les évènnements, une galerie de photos et les coordonnées du camping.</p>
-                  <p>Le site web est piloté par un CMS Wordpress et l'équipe AFR s'est assuré que le client puisse mettre à jour aisément les informations de la page.</p>
+                  <p>Le site montre les différents services offerts au camping, les évènements, une galerie de photos et les coordonnées du camping.</p>
+                  <p>Le site web est piloté par un CMS Wordpress et l'équipe AFR s'est assurée que le client puisse mettre à jour aisément les informations de la page.</p>
                   <a href="http://www.campingruisseaubleu.com/" target="_blank">Site web Camping Ruisseau Bleu</a>
                 </div>
                 <div class="link-header">Yarrrrr!</div>
@@ -125,7 +125,7 @@
             <div class="row-fluid">
               <div class="span3">
                 <h4><img src="assets/img/tech/wp.png"> Wordpress</h4>
-                <p>Outil de gestion de contenu de site web afin de façilement garder votre page web à jour en y ajoutant ou modifiant son contenu.</p>
+                <p>Outil de gestion de contenu de site web afin de facilement garder votre page web à jour en y ajoutant ou modifiant son contenu.</p>
                 <a href="http://wordpress.org/">Site officiel Wordpress</a>
               </div>
               <div class="span3">
@@ -140,7 +140,7 @@
               </div>
               <div class="span3">
                 <h4><img src="assets/img/tech/node.png"> NodeJS</h4>
-                <p>NodeJS est une plateforme javascript permettant le développement d'application réseau légères et rapide en temps réel</p>
+                <p>NodeJS est une plateforme JavaScript permettant le développement d'applications réseaux légères et rapides en temps réel</p>
                 <a href="http://nodejs.org/">Site officiel Node</a>
               </div>
             </div>
